# netbsd-tools

./: .gitignore  README.md  configure.ac
difference/: find.patch  m4.patch  patch.patch  pax.patch  sed.patch  xargs.patch
include/: bsd.h  fts.h  vis.h
src/: Makefile.am
src/find/: Makefile  Makefile.am  extern.h  find.c  function.c  ls.c  main.c  misc.c  operator.c  option.c
src/libnetbsd/: Makefile.am  _strtoi.h  _strtol.h  _strtoul.h  efun.c  fgetln.c  fgetstr.c  fileext.h  fts.c  getprogname.c  parsedate.tab.c  parsedate.y  pwcache.c  raise_default_signal.c  reallocarr.c  reentrant.h  setlocale_local.h  setmode.c  setprogname.c  stat_flags.c  strlcat.c  strlcpy.c  strmode.c  strtoi.c  strtoimax.c  strtoq.c  strtou.c  strtoumax.c  useless.c  verrc.c  vis.c
src/m4/: Makefile.am  eval.c  expr.c  gnum4.c  look.c  main.c  mdef.h  misc.c  parser.y  tokenizer.c  tokenizer.l  trace.c
src/m4/lib/: Makefile.am  ohash.h  ohash_do.c  ohash_enum.c  strtonum.c
src/patch/: Makefile.am  backupfile.c  inp.c  mkpath.c  patch.c  pch.c  util.c
src/pax/: Makefile.am  ar_io.c  ar_subs.c  buf_subs.c  cpio.c  extern.h  extern.h.gch  file_subs.c  ftree.c  gen_subs.c  getoldopt.c  options.c  pack_dev.c  pat_rep.c  pax.c  sel_subs.c  tables.c  tar.c  tty_subs.c
src/sed/: Makefile  Makefile.am  compile.c  main.c  misc.c  process.c  sed
src/xargs/: Makefile.am  strnsubst.c  xargs.c
