AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libnetbsd.a
libnetbsd_a_SOURCES = efun.c \
			errc.c \
			fgetln.c \
			fgetstr.c \
			fts.c \
			getprogname.c \
			parsedate.tab.c \
			pwcache.c \
			setprogname.c \
			reallocarr.c \
			reallocarray.c \
			raise_default_signal.c \
			setmode.c \
			stat_flags.c \
			strlcat.c \
			strlcpy.c \
			strmode.c \
			strtoq.c \
			strtoi.c \
			strtoimax.c \
			strtou.c \
			strtoumax.c \
			useless.c \
			verrc.c \
			vis.c
